Fix layout breaks and image outline.
Changed the outline in img to border.
Changed media queries to work property.

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ h1 {
   border-radius: 0 50rem 50rem 0;
   filter: drop-shadow(0 0 4px var(--shadow-color));
 
-  padding: 3rem;
+  padding: 2rem;
   max-width: 30rem;
 
   display: flex;
@@ -94,8 +94,8 @@ h1 {
 
 .hero-img img {
   border-radius: 50%;
-  outline: 1rem solid var(--white-color);
-  max-width: 20rem;
+  border: 1rem solid var(--white-color);
+  max-width: 22rem;
 }
 
 .hero-section h1 {
@@ -249,7 +249,7 @@ h1 {
 .footer-section {
   font-weight: bold;
   gap: 0.5rem;
-  padding: 0.5rem;
+  padding: 1rem;
 
   display: flex;
   flex-direction: row;
@@ -270,6 +270,35 @@ h1 {
 }
 
 /* =-=-=-=-=-=-= Media Queries =-=-=-=-=-=-= */
+
+@media (min-width: 2560px) {
+  html {
+    /* Grow font-size for 4k screen and above. */
+    font-size: 125%;
+  }
+}
+
+@media (min-width: 1600px) and (max-width: 2559px) {
+  html {
+    /* Grow font-size for larger screens. */
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 1023px) {
+  .main-section {
+    /* Fix the mobile landscape breaking layout. */
+    height: 100vmax;
+  }
+}
+
+@media (max-width: 920px) {
+  /* Fix the footer alignment problem in small devices. */
+  .footer-section {
+    text-align: center;
+    flex-direction: column-reverse;
+  }
+}
 
 @media (max-width: 767px) {
   /* Media Queries for mobile/tablet devices */
@@ -303,31 +332,14 @@ h1 {
   }
 }
 
-@media (max-width: 920px) {
-  /* Fix the footer alignment problem in small devices. */
-  .footer-section {
-    text-align: center;
-    flex-direction: column-reverse;
-  }
-}
-
-@media (max-width: 1023px) {
-  .main-section {
-    /* Fix the mobile landscape breaking layout. */
-    height: 100vmax;
-  }
-}
-
-@media (min-width: 1600px) and (max-width: 2559px) {
+@media (max-width: 375px) {
   html {
-    /* Grow font-size for larger screens. */
-    font-size: 93.75%;
+    font-size: 50%;
   }
 }
 
-@media (min-width: 2560px) {
+@media (max-width: 320px) {
   html {
-    /* Grow font-size for 4k screen and above. */
-    font-size: 125%;
+    font-size: 43.75%;
   }
 }
